test/trivial/shannon/readWriteEnum.good
Tuesday
readWriteEnum.chpl:6: error: bad format: missing expected literal in channel.read(ref a:week) with path "readWriteEnum.stdin" offset 7
