test/trivial/shannon/readWriteEnum.chpl
use IO;

enum week {Monday, Tuesday, Wednesday, Thursday, Friday, Saturday, Sunday};
var day: week;

read(day);
writeln(day);
read(day);
writeln(day);